tests/codegen/fail/union/attr_wrong_item.rs
use coasys_juniper::graphql_union;

#[graphql_union]
enum Character {}

fn main() {}
